--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>calculadora simples</title>
+    <title>aque e o paulo</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -23,8 +23,11 @@
         <button onclick="appendToDisplay('3')">3</button>
         <button onclick="appendToDisplay('*')">*</button>
         <button onclick="appendToDisplay('0')">0</button>
+        <button onclick="appendToDisplay('.')">/</button>
         <button onclick="calculateresult()">=</button>
         <button onclick="appendToDisplay('/')">/</button>
+        
+        
   </div>
 <script src="main.js"></script>
 </body>
